--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,67 @@
 body {
   margin: 0;
+  padding:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #6599FF;
+  /* -webkit-font-smoothing: antialiased; */
+  /* -moz-osx-font-smoothing: grayscale; */
+}
+
+.appBody{
+  padding: 7%;
+}
+.mainTitle{
+  text-align: center;
+}
+
+.subTitle{
+  text-align: center;
+}
+
+.questionSection{
+  padding-top: 100px;
+  /* border: solid; */
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 225px;
+
+}
+.question{
+  text-align: center;
+  margin: auto;
+  font-size: 25px;
+}
+
+.buttonSection{
+  display: flex;
+  flex-direction: column;
+
+}
+
+button{
+  padding: 3%;
+  margin-bottom: 2%;
+  background-color: #8a9595;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  width: 100%;
+}
+
+.answerSection{
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  /* border:solid; */
+  height: 100px;
+}
+
+.answer{
+  text-align: center;
+  margin: auto;
+  font-size: 30px;
 }
 
 code {
