--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,37 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background-color: #6599FF;
+  /* background-color: #6599FF; */
+  background-image: linear-gradient(to bottom, #cffdfd, #1e75cb);
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
 }
 
+.App {
+  height: 100%;
+}
 .appBody{
   padding: 7%;
+  height:100%;
 }
 .mainTitle{
   text-align: center;
+  color: #e3eaf1;
+  font-size: 40px;
+  text-shadow: 1px 1px black;
+  background-color: #fdd03e;
 }
 
 .subTitle{
   text-align: center;
+  color: #e3eaf1;
+  font-size: 20px;
+  text-shadow: 1px 1px black;
+  background-color: #fdd03e;
 }
+
+
+
 
 .questionSection{
   padding-top: 100px;
@@ -27,11 +43,14 @@ body {
   padding-right: 20px;
   height: 225px;
 
+
 }
 .question{
   text-align: center;
   margin: auto;
+  color: #e3eaf1;
   font-size: 25px;
+  text-shadow: 1px 1px black;
 }
 
 .buttonSection{
@@ -43,11 +62,12 @@ body {
 button{
   padding: 3%;
   margin-bottom: 2%;
-  background-color: #8a9595;
+  background-color: #4CA671;
   border: none;
   border-radius: 5px;
   color: white;
   width: 100%;
+  font-size: 20px;
 }
 
 .answerSection{
@@ -62,6 +82,8 @@ button{
   text-align: center;
   margin: auto;
   font-size: 30px;
+  color: #e3eaf1;
+  text-shadow: 1px 1px black;
 }
 
 code {
