--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@ body {
   color: #e3eaf1;
   font-size: 40px;
   text-shadow: 1px 1px black;
-  background-color: #fdd03e;
+  /* background-color: #fdd03e; */
+  background-image:  linear-gradient(to top left, #fee79a, #fdd03e);
 }
 
 .subTitle{
