--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   /* background-color: #6599FF; */
-  background-image: linear-gradient(to bottom, #cffdfd, #1e75cb);
+  background-image: linear-gradient(to bottom right, #cffdfd, #1e75cb);
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
 }
